--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <img src="img/minamino.png" alt="">
         <div class="contentsText">
           <h2>南野拓実（リヴァプール）</h2>
-          <h3>駆け回る爽やかイケメン</h3>
+          <h3>縦横無尽に駆け回るMF</h3>
           <p>
             爽やかなルックスからは想像できない献身的なプレーでチームに貢献する攻撃的ミッドフィルダー。
             世界最高峰のチームでさらに成長中。
@@ -112,14 +112,8 @@
       </li>
     </ul>
   </main>
-
+<br>
   <footer>
-    <p>作成者Twitter→
-      <a id="twi" href="https://twitter.com/kxdmsmjr">
-      <img id="photo" src="img/twi.png">
-    </a>
-    </p>
-    
   <br>
     <a href="#top">ページトップへ戻る</a>
   </footer>
