--- a/index.html
+++ b/index.html
@@ -110,6 +110,36 @@
           </p>
         </div>
       </li>
+      <li class="animationTarget">
+        <img src="img/kouki.png" alt="">
+        <div class="contentsText">
+          <h2>斉藤光毅（ロンメルSK）</h2>
+          <h3>切れ味鋭いドリブル</h3>
+          <p>
+            横浜FCにおいて大車輪の活躍を見せ海外へステップアップ。
+            繊細なボールタッチと相手の懐に潜り込むようなドリブルで敵を翻弄する。
+            体のサイズとしては大きくないが、ディフェンスに当たり負けしないボディコントロールも魅力。
+            <br>
+            左サイドからカットインしてのシュートやアシストが光る。
+            同世代の久保建英に負けない活躍が期待される。
+          </p>
+        </div>
+      </li>
+      <li class="animationTarget">
+        <img src="img/nishi.png" alt="">
+        <div class="contentsText">
+          <h2>西川潤（セレッソ大阪）</h2>
+          <h3>天才レフティー</h3>
+          <p>
+            爽やかなルックスで注目されるが、サッカーの技術もピカイチ。
+            世代別代表では10番を背負い、チームの中心として活躍してきた。
+            左足から繰り出される正確なパスでのアシストはもちろん、独特のテンポでタメを作ったり繊細なタッチで相手をかわすのも得意。
+            <br>
+            一部の噂ではバルセロナが獲得に動いているという情報も。
+            同世代の久保建英と重なる部分も多いが、二人のレフティーの共演を日本代表で見たいと願うファンも多いのでは。
+          </p>
+        </div>
+      </li>
     </ul>
   </main>
 <br>
