--- a/index.html
+++ b/index.html
@@ -4,26 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>日本サッカー ヤングスター</title>
+  <title>日本サッカー</title>
   <link rel="icon" type="image/x-icon" href="./img/ball.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header id="top">
-    <h1>日本サッカー 期待の若手</h1>
-    <p>＊こちらは作者の個人的な見解を自由に述べたページとなります。</p><P>＊異なるご意見をお持ちの方もいらっしゃるとは思いますが、数多くのサッカーファンのうちのたったひとりの意見として受け取っていただけますと幸いです。</P><p>＊今回は6名の選手を取り上げましたが、また随時更新予定です。</P>
+    <h1>日本サッカー</h1>
+    <p>＊こちらは作者の個人的な見解を自由に述べたページとなります。</p><P>＊異なるご意見をお持ちの方もいらっしゃるとは思いますが、数多くのサッカーファンのうちのたったひとりの意見として受け取っていただけますと幸いです。</P><p>＊随時更新予定です。</P>
   </header>
+
   <main>
+    <h1 class="first">期待の若手</h1>
     
     <ul class="contents">
       <li class="animationTarget">
         <img src="img/take.png" alt="">
         <div class="contentsText">
-          <h2>久保建英（ビジャレアル）</h2>
+          <h2>久保建英（ヘタフェ）</h2>
           <h3>日本サッカー界の宝</h3>
           <p>
-            カンテラ育ちの攻撃的ミッドフィルダー。<br>
+            スペイン育ちの攻撃的ミッドフィルダー。<br>
             足元の技術の高さはもちろん、高いサッカーIQの持ち主。<br>
             常にルックアップした状態から高い状況判断力を駆使。
             正確な判断と局面を打開する鋭いスルーパスが光る。<br>
@@ -141,11 +143,44 @@
         </div>
       </li>
     </ul>
+
+ <section class="chara">
+   <h1>日本サッカーの特徴</h1>
+   <ul>
+     <li>足元の技術は世界レベルにある。</li>
+     <p>パス、トラップ、ドリブルなどは世界に劣らないレベルにある。</p>
+     <li>サイドバック、中盤は競合国に劣らない選手が出てきている。</li>
+     <p>特にサイドバックは酒井、長友の両サイドがロシアW杯でもクオリティの高さを見せつけた。</p>
+     <li>海外で活躍している選手が増えてきている。</li>
+     <p>若い世代うちから海外でもまれている選手は増えている。</p>
+     <li>規律をしっかり守る選手が多い。</li>
+     <p>チームの決まり事にしっかり従い、コンセプトを大事にする選手が多い。</p>
+    </ul>
+  </section>
+
+    <section class="future">
+      <h1>今後求められること</h1>
+      <ul>
+        <li>ゴールを奪えるFW</li>
+        <p>決定力不足は長年日本で叫ばれてきた課題であり、FWは弱点の1つである。大迫のおうなポストプレーに長け、タメを作れる選手ももちろん素晴らしいが、やはり得点を奪うのがFWの仕事である。</p>
+        <li>ビルドアップの安定したGK</li>
+        <p>後ろからの組み立てにGKが関わるようになった現代フットボールにおいて、正確なフィードを繰り出せるGKの存在は必須である。</p>
+        <li>戦術眼に優れた監督、コーチ</li>
+        <p>アジアレベルでは個の力の差で勝てるが、世界レベルでは戦術の重要性は高い。W杯ベスト16の壁を超えるのにもっとも必要なの戦術眼に優れた監督なのでは？</p>
+        <li>海外チームのトップレベルで活躍できる選手</li>
+        <p>個のレベルでいうと海外のトップで活躍できる選手が出てくるようになる必要性を感じる。ドルトムントで活躍した香川のようなレベルで継続的に結果を出せる選手が出る来てほしい。</p>
+      </ul>
+    </section>
+
+
+
+
+
   </main>
 <br>
   <footer>
   <br>
-    <a href="#top">ページトップへ戻る</a>
+    <a href="#top">⚽<br><p> TOPへ</p></a>
   </footer>
 
   <script src="app.js"></script>
